--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href={% static 'css/file_upload.css' %} crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8">
     <title>Data Annotation Tools</title>
 </head>
